# lornewspaper

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.clinical  FAQ.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SESSION_HISTORY.md  SUPPORT.md  docker-compose.clinical.yml  docker-compose.prod.yml  docker-compose.yml  opencode.json  pyproject.toml  render.yaml  requirements.txt
api/: app.py  config.py  dependencies.py  env_validator.py  exception_handlers.py  middleware.py  security.py
clinical_assistant/: __init__.py  app.py  config.py  dependencies.py
docs/: FREE_DEPLOYMENT_GUIDE.md  acceptance_test_report.md  api_anchor.md  api_review.md  architecture-review-2026-07-09.md  benchmark.md  benchmark_report.md  clinical_assistant_architecture.md  content_discovery_anchor.md  content_discovery_review.md  daily_digest_anchor.md  daily_digest_review.md  deployment.md  deployment_production.md  document_processing_service_anchor.md  document_processing_service_review.md  download_service_anchor.md  download_service_review.md  e2e_report.md  editorial_engine_anchor.md  editorial_engine_review.md  future_products.md  load_test_report.md  open_source_review.md  operations.md  pipeline_report.md  platform_scorecard.md  platform_validation_report.md  product_review.md  production_audit_report.md  production_checklist.md  real_world_validation.md  real_world_validation.py  research_agent_anchor.md  research_agent_review.md  security_report.md  sprint1_release_notes.md  v1_benchmarks.md  v1_checklist.md  v1_known_limitations.md  (+4 more)
document_processing_service/: __init__.py  _async_utils.py  config.py  exceptions.py  markdown_generator.py  models.py  ocr_detector.py  service.py  text_extractor.py
download_service/: __init__.py  cache.py  checksum.py  config.py  exceptions.py  http_client.py  logging_config.py  models.py  service.py
knowledge_base/: __init__.py  config.py  (+6 more)
(+267 files in other folders)
