[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-guideline-assistant"
version = "0.1.0"
description = "AI-powered evidence-based clinical decision support"
requires-python = ">=3.11"
dependencies = [
    "lornews @ git+https://github.com/anomalyco/lornewspaper@v1.0",
    "fastapi>=0.115",
    "pydantic>=2.5",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
include = ["clinical_assistant*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
